--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<link rel="stylesheet" href="css/libs/animate.css"/>
 
-  	<link rel="icon" href="image/ast.png">
+  	<link rel="icon" href="image/img/ast.png">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 	
 	
@@ -42,22 +42,22 @@
 <div id="start">
 	<div id="startLeft" class="startBlock">
 		<a href="asteroids.html">Астероиды</a>
-		<img src="image/Asteroidsscale.jpg" width="50%" ><br>
-		<img class="startGif" id="stRotate" src="image/ast.png" width="30%">
+		<img src="image/img/Asteroidsscale.jpg" width="50%" ><br>
+		<img class="startGif" id="stRotate" src="image/img/ast.png" width="30%">
 		
 	</div>
 	<div id="startRight" class="startBlock">
 		<a href="komets.html">Кометы</a>
-		<img src="image/start-komet.jpg" width="50%"><br>
+		<img src="image/img/start-komet.jpg" width="50%"><br>
 
-		<img class="startGif" name="MyPicture" src="image/kom.png" width="45%" onMouseOver="window.document.images['MyPicture'].src='image/kom.gif';" onMouseOut="window.document.images['MyPicture'].src='image/kom.png';">		
+		<img class="startGif" name="MyPicture" src="image/img/kom.png" width="45%" onMouseOver="window.document.images['MyPicture'].src='image/img/kom.gif';" onMouseOut="window.document.images['MyPicture'].src='image/img/kom.png';">		
 	</div>
 </div>
 
-<img id="centerImg" src="image/ast.png" width="15%">
+<img id="centerImg" src="image/img/ast.png" width="15%">
 
 
-<img id="centerImg2" src="image/kom.gif" width="23%">
+<img id="centerImg2" src="image/img/kom.gif" width="23%">
 
 
 
@@ -119,7 +119,7 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="footer-logo-block">
-					<img src="image/ast.png" width="100px" alt="">				
+					<img src="image/img/ast.png" width="100px" alt="">				
 				<div class="footer-copy">
 					<span>Астероиды и Кометы.</span>
 				</div>
