--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<title>About</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="icon" href="image/ast.png">
+	<link rel="icon" href="image/img/ast.png">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 </head>
 <body>
@@ -35,7 +35,7 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="footer-logo-block">
-					<img src="image/ast.png" width="100px" alt="">				
+					<img src="image/img/ast.png" width="100px" alt="">				
 				<div class="footer-copy">
 					<span>Астероиды и Кометы.</span>
 				</div>
