--- a/komets.html
+++ b/komets.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Komets</title>
-	<link rel="icon" href="image/kom.png">
+	<link rel="icon" href="image/img/kom.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
 </head>
@@ -143,7 +143,7 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="footer-logo-block">
-					<img src="image/ast.png" width="100px" alt="">				
+					<img src="image/img/ast.png" width="100px" alt="">				
 				<div class="footer-copy">
 					<span>Астероиды и Кометы.</span>
 				</div>
