--- a/komets.html
+++ b/komets.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Komets</title>
+	<meta charset="utf-8">
 	<link rel="icon" href="image/img/kom.png">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
