--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>About</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="image/img/ast.png">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0">
@@ -24,7 +25,7 @@
 <div id="start" style="background: black">
 	<div id="about">
 		<h1 class="ab">О сайте</h1>
-		<p>Я, студент 2 курса, выполнил данный сайт не только ради того, чтобы выолнить курсовую работу, но и для саморазвития.</p>
+		<p>Я, студент 2 курса, выполнил данный сайт не только ради того, чтобы выполнить курсовую работу, но и для саморазвития.</p>
 		<p>В моих планах модифицировать разные аспекты данного сайта: css и js</p>
 		<h2 class="ab">О чем этот сайт?</h2>
 		<p>Данный сайт предоставляет информацию об астеридах и кометах как в кратком изложении, так и в более подробном рассказе о них.</p>
